Fixed Sextion1 cutoff at 75% zoom

--- a/home/css/index.css
+++ b/home/css/index.css
@@ -72,7 +72,7 @@ The .Header properites
     background: var(--Header_background-color);
     border-bottom: 0px #000 solid;
     width: 100%;
-    height: 10%;
+    height: 80px;
     top: 0;
     position: fixed;  /*was relative*/
     z-index: 100;
@@ -184,7 +184,7 @@ The .Section1 properites
     text-shadow: 1px 1px 3px #000000;
     text-align: left; 
     padding-left: 1.3rem;
-    padding: .7rem 0px 0px 1.3rem 
+    padding-top: 30px;
   }
 /*------------------------------------------*/
 .Section1Title::first-letter {
